# agent-eval-harness

./: .env.example  .gitignore  Makefile  README.md  README_CN.md  pyproject.toml
.github/workflows/: eval.yml
baselines/: refund_support.json
examples/agents/: mock_refund_agent.py
examples/suites/: refund_support.jsonl  refund_support.yaml  safety_misuse.yaml  tool_calling_agent.yaml
src/agent_eval/: __init__.py  calibration.py  canonicalize.py  cli.py  compare.py  harness.py  judges.py  metrics.py  plugins.py  registry.py  reliability.py  runner.py  sampling.py  schemas.py  scoring.py  simulators.py  stats.py  suite_loader.py  taxonomy.py
src/agent_eval/adapters/: __init__.py  base.py  echo.py  http.py
src/agent_eval/environments/: __init__.py  base.py  local_tempdir.py
src/agent_eval/graders/: __init__.py  argument_schema.py  base.py  exact_match.py  llm_rubric.py  milestone.py  regex.py  safety.py  state_check.py  tool_calls.py  transcript.py
src/agent_eval/reporters/: __init__.py  base.py  console_reporter.py  html_reporter.py  json_reporter.py
src/agent_eval/schemas/: __init__.py  results.py  suite.py  trial.py
src/agent_eval/storage/: __init__.py  filesystem.py
src/agent_eval/templates/: report.html.j2
src/agent_eval/ui/: __init__.py  app.py  compare_view.py  live.py  picker.py  presenter.py
tests/: test_calibration.py  test_canonicalize.py  test_cli.py  test_compare.py  test_grader_validation.py  test_harness.py  test_html_reporter.py  test_http_adapter.py  test_jsonl_suite_loader.py  test_judges.py  test_metrics.py  test_milestone_grader.py  test_mixed_k.py  test_plugins.py  test_reliability.py  test_runner_concurrency.py  test_runner_echo_agent.py  test_runner_timeout.py  test_safety_grader.py  test_sampling.py  test_scoring_and_reporters.py  test_simulators.py  test_state_check_grader.py  test_stats.py  test_suite_loader.py  test_taxonomy.py  test_tool_call_grader.py  test_ui.py
