[project]
name = "agent-eval-harness"
version = "0.2.0"
description = "An extensible, CLI-first evaluation harness for tool-calling / agentic systems."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Arthur Zeng" }]
keywords = ["evaluation", "agents", "llm", "tool-calling", "evals"]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "rich>=13.7",
    "httpx>=0.27",
    "jsonschema>=4.21",
]

[project.optional-dependencies]
ui = ["textual>=0.80"]
dev = [
    "textual>=0.80",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.10",
    "types-pyyaml>=6.0",
    "types-jsonschema>=4.21",
]

[project.scripts]
agent-eval = "agent_eval.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_eval"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
# Typer relies on function-call defaults (typer.Option/Argument) by design.
per-file-ignores = { "src/agent_eval/cli.py" = ["B008"] }

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = "3.11"
strict = true
mypy_path = "src"
packages = ["agent_eval"]
ignore_missing_imports = true
